--- a/taskfile.yml
+++ b/taskfile.yml
@@ -3,11 +3,15 @@ version: '3'
 tasks:
   default:
     cmds:
-      - clang-18 -std=c23 -DTEST_MODE *.c -Wall -Wextra -fsanitize=undefined,address
+      - clang -std=c23 -DTEST_MODE *.c -Wall -Wextra
       - ./a.out
   all-test:
     cmds:
       - clang -std=c23 -DTEST_MODE -DTEST_MODE_ALL *.c -Wall -Wextra -fsanitize=undefined,address
+  sanitize:
+    cmds:
+      - clang-18 -std=c23 -DTEST_MODE *.c -Wall -Wextra -fsanitize=undefined,address
+      - ./a.out
   debug:
     cmds:
       - clang -std=c23 -DTEST_MODE *.c -g3 -Wall -Wextra
